Fixed missing media queries rules, changed .box selector to .overflow-auto to avoid flexbox naming conflicts for the future, added prop @use-viewport-states for state selectors

--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -54,7 +54,7 @@
 @use-tablet-landscape:     true;
 @use-hd-ready:             true;
 @use-hd-full:              true;
-@use-media-queries-states: true;
+@use-viewport-states:      true;
 
 // Enables the mixin .ieVerticalGradien automatically included in .verticalGardient, not working with grunt csso
 @use-ie-gradient: false;
